# python-filestate-javascript

./: .gitignore  README.md  pyproject.toml
.wex/: config.yml
.wex/python/app_manager/: .gitignore  requirements.txt
.wex/python/app_manager/tmp/: registry.yml
src/wexample_filestate_javascript/: __init__.py
src/wexample_filestate_javascript/config_option/: biome_config_option.py
src/wexample_filestate_javascript/config_value/: javascript_config_value.py
src/wexample_filestate_javascript/const/: javascript_file.py
src/wexample_filestate_javascript/file/: javascript_file.py
src/wexample_filestate_javascript/option/: javascript_option.py
src/wexample_filestate_javascript/option/javascript/: abstract_javascript_file_content_option.py  biome_option.py
src/wexample_filestate_javascript/options_provider/: javascript_options_provider.py
src/wexample_filestate_javascript/resources/docker/: Dockerfile.javascript-option  biome.json
