[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-filestate-javascript"
version = "0.0.2"
requires-python = ">=3.10"
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
authors = [{name = "weeger", email = "contact@wexample.com"}]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.license]
text = "MIT"

[project.readme]
file = "README.md"
content-type = "text/markdown"
[tool.setuptools.packages.find]
include = ["*"]
exclude = ["wexample_filestate-javascript.testing*"]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_filestate-javascript"
from = "src"
